# android-k2pdfopt

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.gradle  consumer-proguard-rules.pro  settings.gradle
libk2pdfopt/: CMakeLists.txt  build.gradle
libk2pdfopt/src/main/: AndroidManifest.xml
libk2pdfopt/src/main/cpp/include_mod/: config.h
libk2pdfopt/src/main/cpp/k2pdfopt/: k2master.c  k2pdfopt.h  k2proc.c  k2sys.c  wrapbmp.c
libk2pdfopt/src/main/cpp/willus/: fontrender.c  linux.c
src/main/: AndroidManifest.xml
src/main/cpp/: jni.cpp
src/main/java/com/github/axet/k2pdfopt/: K2PdfOpt.java
